# artie-help-webservice

./: Dockerfile  LICENSE  README.md  app.py  fix_model_lambda_layers.py  model.py  preprocess.py  pyproject.toml  requirements.txt
lib/: __init__.py  keras_custom_layers.py
model/: help_model.h5  selectedfeatures.csv
repository/: db.py
service/: model.py  preprocess.py  queue_service.py
